<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="329dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/p1titulo"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:autofillHints="@string/hlnumero1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hlnumero1"
        android:inputType="number"
        android:text="@string/hlnumero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="111dp"
        android:autofillHints="@string/hlnumero2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hlnumero2"
        android:inputType="number"
        android:text="@string/hlnumero2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />


    <Button
        android:id="@+id/btnsum"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:onClick="onclicksuma"
        android:text="@string/blsumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2" />

    <TextView
        android:id="@+id/lblresultados"
        android:layout_width="154dp"
        android:layout_height="83dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/lresultado"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnres"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="onclickres"
        android:text="@string/blrestar"
        app:layout_constraintStart_toEndOf="@+id/btnsum"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="153dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickmul"
        android:text="@string/blmultiplicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsum" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="146dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:onClick="onclickdivi"
        android:text="@string/bldividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/btnmulti"
        app:layout_constraintTop_toBottomOf="@+id/btnres" />

    <Button
        android:id="@+id/btnpo"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onclickpotencia"
        android:text="@string/blpotencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmulti" />

    <Button
        android:id="@+id/btnpoten"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:onClick="onclickpotenciaN"
        android:text="@string/blpotenciaN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btndiv" />

    <Button
        android:id="@+id/btnraiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/blraiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpo" />

</androidx.constraintlayout.widget.ConstraintLayout>